修改文本展示
修改文本展示

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Slate theme
-description: Slate is a theme for GitHub Pages.
+title: pingju020‘s blog
+description: 私人技术总结、分享、记录博客.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-slate
