--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: pingju020‘s blog
 description: 私人技术总结、分享、记录博客.
-show_downloads: true
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-slate
